overflow fixes

--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,10 @@
 @import 'variables';
+
 body {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .people {
@@ -16,6 +19,7 @@ body {
 
     @media (max-width: 750px) {
         grid-template-columns: repeat(2, auto);
+        overflow-x: hidden;
     }
 }
 
@@ -24,7 +28,6 @@ body {
 
     &__container {
         width: $card-width;
-        padding: $padding;
         border-radius: $padding;
         transition: transform 1000ms ease;
         z-index: 2;
@@ -51,9 +54,10 @@ body {
             position: absolute;
             width: 100%;
             height: 100%;
-            top: 0;
-            left: 0;
+            top: -$padding;
+            left: -$padding;
             z-index: -1;
+            padding: $padding;
             border-radius: $padding;
         }
     }
